--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-8 col-md-6 ml-auto mr-auto">
+  <div class="col-lg-6 col-md-6 ml-auto mr-auto">
     <h2><%= t('.sign_up', default: "Sign up") %></h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -26,11 +26,15 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
-      <div><%= f.submit t('.sign_up', default: "Sign up"), class: "btn btn-primary btn-block" %></div>
-    <% end %>
+      <%= render partial: 'devise/shared/policy', locals: {f: f} %>
 
-    <%= render "devise/shared/links" %>
+
+      <div><%= f.submit t('.sign_up', default: "Sign up"), id:"agreement_submit", class: "btn btn-primary btn-block" %></div>
+    <% end %>
   </div>
+</div>
+<div class="row">
+  <%= render "devise/shared/links" %>
 </div>
 
 
